--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ body {
   font-family: 'Samsung Sharp Sans';
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 ul {
